--- a/7.2
+++ b/7.2
@@ -1,1 +1,69 @@
 
+#include <stdio.h>
+#include <stdlib.h>
+#include <time.h>
+
+#define SIZE 10
+
+void initializeArray(int array[], int size) {
+    srand(time(NULL));
+    for (int i = 0; i < size; i++) {
+        array[i] = rand() % 201 - 100;
+    }
+}
+
+void printArray(int array[], int size) {
+    for (int i = 0; i < size; i++) {
+        printf("%d ", array[i]);
+    }
+    printf("\n");
+}
+
+int countLessThanSeven(int array[], int size) {
+    int count = 0;
+    for (int i = 0; i < size; i++) {
+        if (array[i] < 7) {
+            count++;
+        }
+    }
+    return count;
+}
+
+int sumBetweenFirstAndLastPositive(int array[], int size) {
+    int firstPositiveIndex = -1;
+    int lastPositiveIndex = -1;
+
+    for (int i = 0; i < size; i++) {
+        if (array[i] > 0) {
+            if (firstPositiveIndex == -1) {
+                firstPositiveIndex = i;
+            }
+            lastPositiveIndex = i;
+        }
+    }
+
+    int sum = 0;
+    if (firstPositiveIndex != -1 && lastPositiveIndex != -1 && lastPositiveIndex > firstPositiveIndex) {
+        for (int i = firstPositiveIndex + 1; i < lastPositiveIndex; i++) {
+            sum += array[i];
+        }
+    }
+
+    return sum;
+}
+
+int main() {
+    int array[SIZE];
+    initializeArray(array, SIZE);
+
+    printf("Масив: ");
+    printArray(array, SIZE);
+
+    int count = countLessThanSeven(array, SIZE);
+    printf("Кількість елементів, менших за число сім: %d\n", count);
+
+    int sum = sumBetweenFirstAndLastPositive(array, SIZE);
+    printf("Сума елементів між першим та останнім додатними елементами: %d\n", sum);
+
+    return 0;
+}
